# ContextForge-Workv2

./: .gitignore  CLAUDE.md  README.md  package.json  pyproject.toml
apps/backend-api/: .coverage  .dockerignore  .env.example  .env.production.example  .pdm-python  AAR-T11-Integration-Testing-COMPLETION-REPORT.md  AAR-T11-Integration-Testing-CRITICAL-FINDINGS.md  BACKLOG-OTEL-V4.1-POST-IMPLEMENTATION.md  CHECKLIST-ALL-RECOMMENDATIONS.md  COMPREHENSIVE-NEXT-STEPS-CHECKLIST.md  CONFIGURATION-PHASE-1-COMPLETE.md  CONVERSATION-SUMMARY-PHASE-0.5.md  Dockerfile  Dockerfile.agent-cli  EXIT_4_REPRO_4.txt  FINAL_DEBUG_ALL_8.txt  FINAL_DEBUG_ALL_9.txt  FINAL_DEBUG_CLEAN.txt  FINAL_DEBUG_CLEAN_INVALID.txt  FINAL_DEBUG_CLEAN_SRC.txt  FINAL_DEBUG_CLEAN_SRC_RETRY.txt  FINAL_DEBUG_REDIRECT_1.txt  FINAL_DEBUG_REDIRECT_2.txt  IMPLEMENTATION_QUICK_REFERENCE.md  ISSUES-CATALOG.md  MIGRATION-0025-COMPLETION-REPORT.md  MIGRATION-0025-QUICK-REFERENCE.md  MIGRATIONS.md  NEXT-STEPS-COMPREHENSIVE.md  PHASE-0-COMPLETE.md  PHASE-0-COMPLETION-PLAN.md  PHASE-0-FINAL-ROADMAP.md  PHASE-0-IMPLEMENTATION-ROADMAP.md  PHASE-0-PROGRESS-UPDATE.md  PHASE-0-RESEARCH-COMPLETE.md  PHASE-0.1-FOUNDATION-COMPLETE.md  PHASE-0.2-DATABASE-LAYER-COMPLETE.md  PHASE-0.3-PYDANTIC-SCHEMAS-COMPLETE.md  PHASE-0.4-SERVICE-LAYER-COMPLETE.md  PHASE-0.5-API-ENDPOINTS-COMPLETE.md  (+270 more)
apps/backend-api/_archive_src_legacy/taskman_api/: __init__.py  config.py  main.py
apps/backend-api/_archive_src_legacy/taskman_api/api/: __init__.py  deps.py
apps/backend-api/_archive_src_legacy/taskman_api/core/: __init__.py  enums.py  errors.py  result.py
apps/backend-api/_archive_src_legacy/taskman_api/db/: __init__.py  base.py  session.py
apps/backend-api/_archive_src_legacy/taskman_api/infrastructure/: __init__.py  health.py  logging.py  metrics.py
apps/backend-api/_archive_src_legacy/taskman_api/schemas/: __init__.py  action_list.py  base.py  project.py  sprint.py  task.py
apps/backend-api/_archive_src_legacy/taskman_api/services/: __init__.py  action_list_service.py  base.py  project_service.py  sprint_service.py  task_service.py
apps/backend-api/alembic/: env.py
apps/backend-api/alembic/versions/: 20251230_0611_ee44906d5889_fix_schema_take3.py  v2_0001_initial_projects_schema.py  v2_0002_initial_sprints_schema.py  v2_0003_initial_tasks_schema.py  v2_0004_initial_action_lists_schema.py  v2_0005_initial_state_store_schema.py
apps/backend-api/artifacts/: AAR-CODE-REVIEW-BUG-FIX-PHASE.md  AAR-DESIGN-ITERATION-V1-V4.1.md  AAR-DOCUMENTATION-PHASE.md  AAR-OTEL-V4.1-IMPLEMENTATION-2026-01-01.md  HANDOFF-OTEL-V4.1-PR-READY.md  LEARNINGS-EXTRACTED-OTEL-V4.1.md  OTEL-V4.1-IMPLEMENTATION-2026-01-01.yaml  PR-OTEL-V4.1-COMMIT-MESSAGE.md  PR-OTEL-V4.1-DESCRIPTION.md  PR-OTEL-V4.1-EVIDENCE-BUNDLE.md  README-PR-DOCUMENTATION.md
apps/backend-api/docs/: TEST_CONSOLIDATION_SUMMARY.md
apps/backend-api/docs/adr/: ADR-001-model-schema-alignment.md
apps/backend-api/docs/evidence/: REMEDIATION-20251225-COMPLETION.md  REMEDIATION-SPRINT-20251225-EVIDENCE.yaml  REMEDIATION-SPRINT-20251225-SUMMARY.md  remediation-20251225-evidence.yaml
apps/backend-api/docs/handoffs/: circuit-breaker-probe-cycle-test-handoff.md
apps/backend-api/exports/: db_export.json
apps/backend-api/scripts/: apply_schema.py  audit_all_dbs.py  audit_external_dbs.py  backfill_0026.py  check_db_connection.py  check_deps.py  check_dns.py  check_health.py  check_ports.py  check_visibility.py  count_tasks.py  create_and_verify.py  debug_alembic.py  debug_alembic_scripts.py  debug_alembic_state.py  debug_config.py  debug_imports.py  debug_repo.py  debug_tasks.py  diag_docker.py  diag_startup.py  diagnose_infrastructure.py  export_db_data.py  final_audit.py  init_local_db.py  inspect_contextforge_db.py  inspect_import.py  inspect_schema.py  list_projects.py  map_migrations.py  migrate_postgres.py  patch_bools.sql  patch_db_schema.py  patch_full_schema.sql  port_scan.py  reproduce_422.py  reset_db.py  reset_db_schema.py  seed_greenfield.py  seed_local_db.py  (+15 more)
apps/backend-api/src/scripts/: debug_schema.py  diagnose_tasks.py  import_legacy_trackers.py
apps/backend-api/src/taskman_api/: auth.py  config.py  dependencies.py  main.py  rate_limiter.py
apps/backend-api/src/taskman_api/api/: health.py  metrics.py
apps/backend-api/src/taskman_api/core/: enums.py  errors.py  result.py
apps/backend-api/src/taskman_api/db/: __init__.py  base.py  connection_manager.py  custom_types.py  session.py
apps/backend-api/src/taskman_api/mcp/: server.py
apps/backend-api/src/taskman_api/middleware/: __init__.py  logging_middleware.py
apps/backend-api/src/taskman_api/models/: __init__.py  action_list.py  checklist.py  conversation.py  plan.py  project.py  sprint.py  task.py
apps/backend-api/src/taskman_api/repositories/: __init__.py  action_list_repository.py  base.py  checklist_repository.py  conversation_repository.py  plan_repository.py  postgres_project_repository.py  postgres_sprint_repository.py  postgres_task_repository.py  project_repository.py  sprint_repository.py  task_repository.py
apps/backend-api/src/taskman_api/routers/: README.md  agent.py  (+12 more)
apps/backend-api/tests/: conftest.py
apps/backend-api/tests/e2e/: conftest.py  test_critical_workflows.py
apps/backend-api/tests/integration/: conftest.py  test_action_list_service.py  test_health_endpoint.py  test_metrics_endpoint.py
apps/backend-api/tests/performance/: conftest.py  test_api_performance.py
apps/backend-api/tests/regression/: conftest.py  test_api_contract_bugs.py
apps/backend-api/tests/unit/: test_agent_helpers.py  test_config.py  test_context_router.py
apps/mcp-server-py/: README.md  RESEARCH-REPORT.md  pyproject.toml  pyproject.toml.template  pytest.ini
apps/mcp-server-py/scripts/: Invoke-TaskManTests.ps1  migrate_legacy.py  test_mcp_client.py  verify_db.py  verify_mcp_local.py  verify_migration.py
apps/mcp-server-py/src/cf_mcp/: __init__.py  config.py  db.py  models.py  schemas.py  server.py
apps/mcp-server-py/tests/: test_async_context.py  test_async_core.py  test_async_projects.py  test_async_sprints.py
(+1510 files in other folders)
