[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cf-mcp"
version = "0.1.0"
description = "ContextForge MCP Server for Semantic Search and Agentic Access"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "typer>=0.9.0",
    "uvicorn>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
cf-mcp = "cf_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cf_mcp"]
